# cli-player

./: CMakeLists.txt  README.md  cli-player.sln  main.cpp
.cache/clangd/index/: main.cpp.A0BE71DD57A1DA81.idx  main.cpp.C28B747BBAC58DEA.idx
build-linux/: CMakeCache.txt  Makefile  cli-player  cmake_install.cmake  compile_commands.json
build-win/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
cli-player/: cli-player.vcxproj  config.txt  libs.props  main.cpp
